@@ -1,5 +1,13 @@
 2004-12-28  Jerry Quinn  <jlquinn@optonline.net>
 
+	* java/awt/MenuItem.java (getAccessibleContext): Implement.
+	* java/awt/MenuComponent.java (accessibleContext): Make package
+	visible.
+	* java/awt/CheckboxMenuItem.java (getAccessibleContext,
+	AccessibleAWTCheckboxMenuItem): Implement.
+
+2004-12-28  Jerry Quinn  <jlquinn@optonline.net>
+
 	* java/awt/List.java: Implement AccessibleAWTList,
 	AccessibleAWTListChild.
 
